cmake_minimum_required(VERSION 3.13)
project(ASD)

set(CMAKE_CXX_STANDARD 14)

add_executable(ASD sortowania/sortowania.cpp)
add_executable(zajecia1 zadania_rozne/zajecia1.cpp)
add_executable(zajecia2 zajecia2/obowiazkowe.cpp)
add_executable(zajecia3 zajecia3/obowiazkowe.cpp)
add_executable(zajecia4 zajecia4/obowiazkowe.cpp)
add_executable(kolos zajecia5/kolos.cpp)